ON-909 | Fix edit mode issue  - Make station-footer controls visible

--- a/app/styleguides/demo/components/one-column-layout.css
+++ b/app/styleguides/demo/components/one-column-layout.css
@@ -9,14 +9,16 @@
   height: 100vh;
   .layout__page-header,
   .layout__bottom,
-  .layout__bottomSection,
   .layout__bottomAd {
     z-index: 2;
     position: relative
   }
-  .layout__content {
-    background: $white;
+  .layout__content,
+  .layout__bottomSection {
     z-index: 3;
     position: relative;
+  }
+  .layout__content {
+    background: $white;
   }
 }
